--- a/README.Rmd
+++ b/README.Rmd
@@ -9,12 +9,19 @@ output: github_document
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of tidychas is to ...
+The goal of tidychas is to access HUD's CHAS data and output it in a tidy format for users.
 
 ## Installation
 
 You can install the development version of tidychas like so:
 
 ``` r
-install.packages("devtools")
+# install.packages("devtools")
+devtools::install_github("sj-io/tidychas")
+```
+
+Load the package to your library to use it.
+
+``` r
+library(tidychas)
 ```
